# RBI_FastAPI

./: .gitignore  README.md  TODO.md  app.py  main.py  pyproject.toml
db/: db.py  ingectdb.sql  rbi.db  schema.sql  test_db.py
models/: models.py  schema.sql  test_models.py
static/: index.html
